# test/CMakeLists.txt

# 确保测试可以找到所有组件
include_directories(
    ${CMAKE_SOURCE_DIR}/common
    ${CMAKE_SOURCE_DIR}/gateway
    ${CMAKE_SOURCE_DIR}/services
)

# 添加所有测试子目录
if(TARGET im::database)
    add_subdirectory(db)
else()
    message(STATUS "Skipping database tests because im::database is not built.")
endif()
if(TARGET im::user_odb)
    add_subdirectory(odb)
endif()
if(TARGET im::user_service)
    add_subdirectory(user)
endif()
if(TARGET im::user_service AND TARGET im::gateway_core)
    add_subdirectory(gateway_user)
endif()
if(TARGET im::message_service)
    add_subdirectory(message)
endif()
if(TARGET im::push_service)
    add_subdirectory(push)
endif()
if(TARGET im::message_service AND TARGET im::gateway_core)
    add_subdirectory(gateway_message)
endif()
if(TARGET im::friend_service)
    add_subdirectory(friend)
endif()
if(TARGET im::friend_service AND TARGET im::gateway_core)
    add_subdirectory(gateway_friend)
endif()
if(TARGET im::group_service)
    add_subdirectory(group)
endif()
if(TARGET im::group_service AND TARGET im::gateway_core)
    add_subdirectory(gateway_group)
endif()
if(TARGET im::group_service AND TARGET im::gateway_core)
    add_subdirectory(gateway_group_message)
endif()
if(TARGET im::gateway_core
   AND TARGET im::user_service
   AND TARGET im::message_service
   AND TARGET im::friend_service
   AND TARGET im::group_service
   AND TARGET im::push_service)
    add_subdirectory(gateway_local)
endif()
if(TARGET im::gateway_auth)
    add_subdirectory(auth)
endif()
if(MYCHAT_BUILD_LEGACY_UNIT_TESTS)
    add_subdirectory(network)
endif()
if(MYCHAT_BUILD_LEGACY_GATEWAY_TESTS AND TARGET im::gateway_core)
    add_subdirectory(gateway)
elseif(TARGET im::gateway_core)
    message(STATUS "Skipping legacy gateway integration tests. Enable MYCHAT_BUILD_LEGACY_GATEWAY_TESTS after cleanup.")
endif()
if(MYCHAT_BUILD_LEGACY_UNIT_TESTS AND TARGET im::gateway_core)
    add_subdirectory(router)
else()
    message(STATUS "Skipping router manager tests. Enable MYCHAT_BUILD_LEGACY_UNIT_TESTS to build.")
endif()
if(MYCHAT_BUILD_LEGACY_UNIT_TESTS)
    add_subdirectory(utils)
else()
    message(STATUS "Skipping utility tests. Enable MYCHAT_BUILD_LEGACY_UNIT_TESTS to build.")
endif()
